--- a/src/app/requestdetails-admin/requestdetails-admin.component.css
+++ b/src/app/requestdetails-admin/requestdetails-admin.component.css
@@ -4,18 +4,12 @@
     }
     .sidenav {
         width: fit-content;
-        width: 280px;
-        background-color: #EAE2B7;
+        width: 250px;
+        background-color: #FFFFFF;
     }
     .mat-sidenav-content {
         height: 910px;
         background-color: white;
-    }
-    .logo {
-        width: 180px;
-        height: 150px;
-        padding-top: 40px;
-        margin-left: 55px;
     }
     .mat-toolbar {
         background-color: #DD0346;
@@ -23,50 +17,57 @@
         height: 100px;
         box-shadow: 0 3px 2px -2px rgba(0, 0, 0, .2);
     }
-    .ayosgamit {
-        font-family: 'Candara';
-        font-size: 30px;
+    .logo {
+        max-width: 200px;
+        height: 100px !important;
         float: left;
-        color: #FFFFFF;
+        margin-top: -20px !important;
+        margin-left: 25px;
     }
-    .dashtitle {
+    .adminvector {
+        width: 95%;
+        margin-top: -110px !important;
+        margin-left: 10px;
+    }
+    .sidetitle {
         color: #003049;
-        font-size: 25px;
-        margin-left: 80px;
-        margin-top: 60px;
+        font-size: 20px;
+        margin-top: -10px;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
-    .dashvector {
-        width: 360px;
-        height: 250px;
-        margin-left: 620px;
-        margin-top: -60px;
+        text-align: center;
     }
     .nav-icon {
         color: #003049;
-        font-size: 35px;
-        margin-left: 25px;
-        margin-top: -12px;
+        font-size: 28px;
+        margin-left: 20px;
+        margin-top: 15px;
+    }
+    mat-list-item {
+        background-color: transparent !important;
     }
     .dashboardside {
         margin-left: 0px;
-        margin-top: 30px;
+        margin-top: 50px;
         text-align: justify;
-    }
-    .dashboardside:hover {
-        background-color: #c8c19c;
+        background-color: #D6B2BD;
+        border-radius: 20px;
         width: 100%;
         height: 70px;
-        margin-left: 0;
-        margin-top: 20px;
-        text-align: justify;
     }
     .dashboard-btn {
         color: #003049;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 18px;
-        margin-left: 25px;
+        font-size: 16px;
+        margin-left: 20px;
+        margin-top: 25px;
         text-decoration: none;
+    }
+    .dashboardside:hover {
+        background-color: #D6B2BD;
+        border-radius: 20px;
+        width: 100%;
+        height: 70px;
+        text-align: center !important;
     }
     .bookingside {
         margin-left: 0px;
@@ -74,18 +75,19 @@
         text-align: justify;
     }
     .bookingside:hover {
-        background-color: #c8c19c;
+        background-color: #D6B2BD;
+        color: #FFFFFF;
+        border-radius: 20px;
         width: 100%;
         height: 70px;
-        margin-left: 0;
-        margin-top: 20px;
-        text-align: justify;
+        text-align: center !important;
     }
     .booking-btn {
         color: #003049;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 18px;
-        margin-left: 25px;
+        font-size: 16px;
+        margin-left: 20px;
+        margin-top: 25px;
     }
     .profileside {
         margin-left: 0px;
@@ -93,18 +95,39 @@
         text-align: justify;
     }
     .profileside:hover {
-        background-color: #c8c19c;
+        background-color: #D6B2BD;
+        border-radius: 20px;
         width: 100%;
         height: 70px;
-        margin-left: 0;
-        margin-top: 20px;
-        text-align: justify;
+        text-align: center !important;
     }
     .profile-btn {
         color: #003049;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 18px;
-        margin-left: 25px;
+        font-size: 16px;
+        margin-left: 20px;
+        margin-top: 25px;
+    }
+    .logoutside {
+        margin-left: 0px;
+        margin-top: 30px;
+        text-align: justify;
+    }
+    .logout-btn {
+        color: #003049;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        margin-top: -5px;
+        font-size: 16px;
+        margin-left: 20px;
+        margin-top: 25px;
+    }
+    .logoutside:hover {
+        background-color: #D6B2BD;
+        color: #FFFFFF;
+        border-radius: 20px;
+        width: 100%;
+        height: 70px;
+        text-align: center !important;
     }
     .spacer {
         flex: 1 1 auto;
@@ -130,6 +153,30 @@
         margin: auto;
         margin-top: 50px;
     }
+    .headertitle {
+        position: center !important;
+        margin: auto;
+    }
+    .titletxt {
+        color: #FFFFFF;
+        font-size: 25px;
+        text-align: center;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        margin-top: 10px;
+    }
+    .backBtn {
+        font-size: 20px;
+        float: left;
+        margin-top: 10px;
+        margin-left: 50px;
+        background-color: #FFFFFF;
+    }
+    .backicon {
+        color: #dd0346;
+        float: left;
+        margin-left: 2px;
+        font-size: 35px;
+    }
     .backtxt {
         color: #003049;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -151,12 +198,12 @@
         position: center !important;
         margin: auto;
     }
-    .summary {
-        width: 750px;
-        height: 700px;
+    .assigncard {
+        width: 470px;
+        height: 650px;
+        float: left;
+        margin-left: 20px;
         margin-top: 50px !important;
-        position: center !important;
-        margin: auto;
     }
     .title {
         color: #003049;
@@ -177,140 +224,63 @@
         font-size: 18px;
         margin-top: 25px;
     }
-    .fname {
-        margin-left: 20px;
-        margin-top: 20px;
+    .summary {
+        width: 900px;
+        height: 650px;
+        float: left;
+        margin-left: 80px;
+        margin-top: 50px !important;
     }
-    .fname2 {
-        margin-left: 20px;
-        margin-top: 10px;
+    .remindervector {
+        width: 20%;
+        margin-top: -65px !important;
+        float: left;
+        margin-left: -50px;
+    }
+    .label {
+        color: grey;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-size: 15px;
     }
-    .lname {
-        margin-left: 170px;
-        margin-top: -67px;
+    .title {
+        color: #b65e79;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 30px;
+        margin-top: 15px;
+        margin-left: 70px;
     }
-    .lname2 {
-        margin-left: 170px;
-        margin-top: 10px;
-        font-size: 15px;
+    table,
+    tr,
+    th,
+    td {
+        border: none;
     }
-    .number {
-        float: right;
-        margin-right: 100px;
-        margin-top: -67px;
+    .table {
+        margin-top: 50px;
     }
-    .number2 {
-        float: right;
-        margin-right: 145px;
-        margin-top: -33px;
-        font-size: 15px;
+    .header1 {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 16px;
+        color: #b65e79;
+        border: none;
     }
-    .addressinfo {
-        margin-top: 70px;
-    }
-    .address {
-        margin-left: 20px;
-        margin-top: -40px;
-    }
-    .address2 {
-        margin-left: 20px;
-        margin-top: 10px;
-        font-size: 13px;
-    }
-    .city {
-        margin-left: 170px;
-        margin-top: -70px;
-    }
-    .city2 {
-        margin-left: 170px;
-        margin-top: 10px;
-        font-size: 15px;
-    }
-    .property {
-        float: right;
-        margin-right: 160px;
-        margin-top: -70px;
-    }
-    .property2 {
-        float: right;
-        margin-right: 200px;
-        margin-top: -35px;
-        font-size: 15px;
-    }
-    .zipcode {
-        float: right;
-        margin-right: 20px;
-        margin-top: -70px;
-    }
-    .zipcode2 {
-        float: right;
-        margin-right: 40px;
-        margin-top: -35px;
-        font-size: 15px;
-    }
-    .serviceinfotxt {
-        color: #003049;
+    .body1 {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-size: 18px;
-        margin-top: 20px;
+        color: #14213D;
+        border: none;
     }
-    .appliance {
-        margin-left: 20px;
+    .header2 {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 16px;
+        color: #b65e79;
+        border: none;
     }
-    .appliance2 {
-        margin-left: 20px;
-        font-size: 15px;
-    }
-    .brand {
-        margin-left: 170px;
-        margin-top: -70px;
-    }
-    .brand2 {
-        margin-left: 170px;
-        font-size: 15px;
-        margin-top: 10px;
-    }
-    .unittype {
-        float: right;
-        margin-right: 190px;
-        margin-top: -70px;
-    }
-    .unittype2 {
-        float: right;
-        margin-right: 205px;
-        margin-top: -33px;
-        font-size: 15px;
-    }
-    .unitprob {
-        margin-top: 70px;
-    }
-    .unitproblem {
-        margin-left: 20px;
-        margin-top: -35px;
-    }
-    .unitproblem2 {
-        margin-left: 20px;
-        font-size: 15px;
-    }
-    .datetimeinfo {
-        margin-top: 30px;
-    }
-    .date {
-        margin-left: 20px;
-    }
-    .date2 {
-        margin-left: 20px;
-        font-size: 15px;
-    }
-    .time {
-        margin-left: 180px;
-        margin-top: -68px;
-    }
-    .time2 {
-        margin-left: 180px;
-        margin-top: 10px;
-        font-size: 15px;
+    .body2 {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 18px;
+        color: #14213D;
+        border: none;
     }
     .termschkbox {
         color: #003049;
@@ -319,46 +289,38 @@
         float: left;
         margin-left: 200px;
     }
-    .pending {
-        width: 100%;
-        height: 100%;
-        margin: auto;
-    }
-    .pendingtxt {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 23px;
-        color: #F77F00;
-        float: right;
-        margin-right: 740px;
-    }
-    .description {
-        float: left;
-        margin-left: 33px;
-        margin-top: 20px;
-    }
-    .description1 {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 15px;
-        color: grey;
-    }
-    .description2 {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 15px;
-        color: grey;
-        margin-top: -15px;
-    }
-    .description3 {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 15px;
-        color: grey;
-        margin-top: -15px;
-    }
-    .serviceinfotxt {
-        font-size: 15px;
-    }
     .container {
         width: 100%;
         height: 100%;
+    }
+    .activetitle {
+        color: #b65e79;
+        font-size: 25px;
+        margin-top: 15px !important;
+        margin-left: 25px !important;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+    .label2 {
+        color: grey;
+        font-size: 16px;
+        margin-top: -5px;
+        margin-left: 25px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+    .techname {
+        color: #003049;
+        font-size: 18px;
+        margin-left: 90px;
+        margin-top: -43px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+    .listofactive {
+        margin-top: 50px !important;
+    }
+    .usericon {
+        font-size: 50px;
+        color: grey;
+        margin-left: 30px;
     }
     .proceedBtn {
         width: 100px;
@@ -387,10 +349,21 @@
     .radioBtn {
         margin: 5px;
     }
+    .assignBtn {
+        width: 80px;
+        height: 35px;
+        margin-top: -35px;
+        float: right;
+        margin-right: 50px;
+        background-color: #fcb42a;
+        color: #FFFFFF;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 15px;
+    }
     .acceptBtn {
-        width: 120px;
-        height: 40px;
-        background-color: #8a1c3b;
+        width: 100px;
+        height: 50px;
+        background-color: #fcb42a;
         color: #FFFFFF;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-size: 16px;
@@ -399,23 +372,20 @@
         margin-top: 1px;
     }
     .acceptBtn:hover {
-        background-color: #590D22;
-        transition: 0.3s;
+        color: #f9dcc4;
     }
     .rejectBtn {
-        width: 120px;
-        height: 40px;
-        border-color: #D62828;
-        color: #D62828;
+        margin-top: -70px !important;
+        width: 100px;
+        height: 50px;
+        background-color: #D62828;
+        color: #FFFFFF;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-size: 16px;
         float: right;
         margin: 5px;
-        margin-top: 1px;
     }
     .rejectBtn:hover {
-        background-color: #D62828;
-        color: #FFFFFF;
-        transition: 0.3s;
+        color: #f9dcc4;
     }
 }
