--- a/src/app/technicians/technicians.component.css
+++ b/src/app/technicians/technicians.component.css
@@ -176,17 +176,14 @@
             .content1 {
                 margin: auto;
             }
-            .searchfield {
-                width: 250px;
-                height: 10px;
-                margin-top: 20px;
-                float: right;
+            .headertitle {
+                position: center !important;
+                margin: auto;
             }
             .titletxt {
                 color: #FFFFFF;
                 font-size: 25px;
-                float: left;
-                margin-left: 20px;
+                text-align: center;
                 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
                 margin-top: 30px;
             }
@@ -199,11 +196,38 @@
             }
             .addtech {
                 background-color: #FCBF49;
-                margin-left: 80px;
-                margin-top: 50px;
+                float: right;
+                margin-right: 50px;
+                margin-top: -40px;
             }
             .addicon {
                 color: #FFFFFF;
+            }
+            .employeesvector {
+                width: 22%;
+                float: left;
+                margin-top: -50px !important;
+            }
+            .title {
+                color: #b65e79;
+                font-size: 25px;
+                margin-top: 15px !important;
+                margin-left: 45px !important;
+                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            }
+            .label {
+                color: grey;
+                font-size: 16px;
+                margin-top: -5px;
+                margin-left: 2px;
+                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            }
+            .label2 {
+                color: grey;
+                font-size: 16px;
+                margin-top: -5px;
+                margin-left: 45px;
+                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             }
             .technician1 {
                 width: 750px;
@@ -226,25 +250,37 @@
                 margin-left: 900px;
                 margin-top: -105px;
             }
-            .activetech {
+            .activecard {
                 width: 650px;
                 height: 500px;
                 float: left;
                 margin-left: 900px;
-                margin-top: 40px;
+                margin-top: -470px;
             }
             .activetitle {
-                color: #003049;
-                font-size: 18px;
-                text-align: center;
+                color: #b65e79;
+                font-size: 25px;
+                margin-top: 15px !important;
+                margin-left: 45px !important;
                 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            }
+            .listofnames {
+                margin-top: 60px !important;
+            }
+            .listofactive {
+                margin-top: 50px !important;
+            }
+            .usericon {
+                font-size: 50px;
+                color: grey;
+                margin-left: 30px;
             }
             .name1 {
                 color: #003049;
                 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
                 font-size: 18px;
-                margin-left: 55px;
-                margin-top: 2px;
+                margin-left: 90px;
+                margin-top: -43px;
             }
             .position1 {
                 color: #003049;
